prevent wrapping on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ code {
   background-position: center absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 12em;
+  height: 11em;
 }
 
 .intro {
